--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">My_Library</string>
+    <string name="app_icon">App icon</string>
+    <string name="my_library">My Library</string>
+    <string name="show_all_books">Show All Books</string>
+    <string name="currently_reading_books">Currently Reading Books</string>
+    <string name="already_read_books">Already Read Books</string>
+    <string name="see_your_favourites">See Your Favourites</string>
+    <string name="about">About</string>
+    <string name="developed_by_sakr">Developed By Sakr</string>
+    <string name="want_to_read">Want To Read</string>
 </resources>
